Fixed styling issues on homepage and services list page. Improving the wireframe overall to make everything align neatly

--- a/frontend/src/components/css/Home.css
+++ b/frontend/src/components/css/Home.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    width: 100%;
+    width: calc(100% - 40px);
     height: 85vh;
     margin: 20px;
     border-radius: 15px;
@@ -17,7 +17,6 @@
 
 .home-container {
     width: 100%;
-    height: 100vh;
     overflow: hidden; 
     display: flex; 
     justify-content: center;
@@ -104,7 +103,6 @@
 .home-services-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 60%;
     height: 100%;
@@ -112,7 +110,7 @@
 
 .beforeAfters {
     width: 40%;
-    height: 99%;
+    height: 103.5%;
     font-family: 'Outfit', serif;
     margin-right: 15px;
     background-color: var(--color-secondary);
@@ -132,7 +130,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    min-height: 100%;
 }
 
 .home-services-container > .content-section > div {
@@ -411,6 +409,11 @@
 @media (max-width: 480px) {
     .carousel-caption {
         font-size: 0.6rem !important;
+    }
+
+    .background {
+        width: 100%;
+        border-radius: 0;
     }
 
     .beforeAfters {
