--- a/frontend/src/components/css/Services.css
+++ b/frontend/src/components/css/Services.css
@@ -17,10 +17,10 @@
 #service-list .css-27ov7w-JoyCardContent-root {
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 #service-list .css-11885m6-JoyCard-root {
-    height: fit-content;
+    height: 600px;
 }
 
 #service-list .css-ar9ysw-JoyTypography-root,
@@ -110,14 +110,11 @@
 
 @media (max-width: 1400px) {
     #service-list .css-11885m6-JoyCard-root {
-        min-height: 75vh;
+        min-height: 630px;
     }
 }
 
 @media (max-width: 1200px) {
-    #service-list .css-11885m6-JoyCard-root {
-        min-height: fit-content;
-    }
 
     #service-list {
         width: 100%;
@@ -125,6 +122,7 @@
 }
 
 @media (max-width: 768px) {
+    
     #single-service > div > h2 {
         font-size: 2.4rem;
     }
@@ -134,7 +132,11 @@
     }
 }
 
-@media (max-width: 551px) {
+@media (max-width: 599px) {
+    #service-list .css-11885m6-JoyCard-root {
+        min-height: fit-content;
+    }
+
     #single-service > div > h2 {
         font-size: 2rem;
     }
